[fix] FCM Google Credential code